fix focus outline getting cut off

--- a/src/components/presentation/NavBar.module.css
+++ b/src/components/presentation/NavBar.module.css
@@ -13,3 +13,7 @@
   align-items: flex-end;
   gap: 1rem;
 }
+
+button.buttonMargin {
+  margin-top: calc(var(--semantic-tab_focus-outline-offset) + var(--semantic-tab_focus-outline-width));
+}
